Fixes bad padding on firefox for list of crits.

--- a/assets/css/project.styl
+++ b/assets/css/project.styl
@@ -91,6 +91,7 @@
         overflow hidden
         text-overflow ellipsis
         display inline-block
+        margin-bottom -5px
 
    .page-header
      padding-bottom 0
